--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Sea stories'
 - !lcsh 'Adventure stories'
+- GITenberg
 title: 'The Shipwreck
 
   A Story for the Young'
